--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,70 +1,17 @@
-body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
 
-.grid {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 1px;
-}
+@import 'base/typography';
+@import 'base/reset';
 
-.grid-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@import 'components/buttons';
+@import 'components/playerCards';
 
-  button {
-    font-size: 0px;
-    border: none;
-    border-radius: 50%;
-    background: #152938;
-    color: white;
-    font-weight: bold;
-    &.selected {
-        background: #FDA214;
-        font-size: 44px;
-        pointer-events: none;
-    }
-    &.active {
-        font-size: 44px;
-        background: #7191A5;
-        pointer-events: none;
-    }
-  }
-}
+@import 'layout/menu';
 
-.grid-8 {
-  max-width: 537px;
-  .grid-item {
-    width: 23%;
+@import 'pages/startScreen';
+@import 'pages/grid';
+@import 'pages/finishModal';
 
-    button {
-      height: 72px;
-      width: 72px;
-    }
-  }
-}
 
-.grid-18 {
-  max-width: 572px;
-  .grid-item {
-    width: 16%;
 
-    button {
-      height: 46px;
-      width: 46px;
-    }
-  }
-}
-
-button {
-  cursor: pointer;
-}
-
-[data-prefix] {
-  pointer-events: none;
-}
